--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #000;
 }
 
-.App-link {
-  color: #61dafb;
+.chat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 600px;
+  height: 600px;
+  background: #212121;
+  max-height: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 60%;
+  margin-top: 20px;
+}
+
+.inputHeader {
+  width: 150px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  height: 40px;
+  padding: 0 20px;
+  font-size: 14px;
+  background: #474747;
+  color: #fff;
+  outline: none;
+}
+
+.messages {
+  width: 100%;
+  height: 100%;
+  margin: 20px 0;
+  border: 3px solid #333;
+  padding: 20px;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.wrapperSend {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 90%;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 90%;
+  border: 1px solid #333;
+  border-radius: 4px;
+  height: 40px;
+  padding: 0 20px;
+  font-size: 14px;
+  background: #474747;
+  color: #fff;
+  outline: none;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 40px;
+  font-size: 14px;
+  background: #333;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  color: #fafafa;
+  border: 0 solid;
+  border-radius: 5px;
+  margin-left: 10px;
 }
